fix(style): `blockquote` under lists should have gaps also

--- a/_sass/_bullets.scss
+++ b/_sass/_bullets.scss
@@ -7,7 +7,8 @@ ul, ol {
   }
   blockquote {
     padding-left: 0.5em;
-    margin: 0 0.5em;
+    margin-left: 0.5em;
+    margin-right: 0.5em;
   }
 }
 ol ::marker, ul ::marker {
